Add fonts to dashboard and adjust config so that the dashbaord runs

--- a/Parse-Dashboard/index.html
+++ b/Parse-Dashboard/index.html
@@ -9,6 +9,6 @@ if(typeof(FontFace)==='undefined')document.body.className+=' fonts_loaded';
 else loadFonts();
 </script>
 <div id="browser_mount"></div>
-<script src="/bundles/PIG.bundle.js"></script>
+<script src="/bundles/dashboard.bundle.js"></script>
 </body>
 </html>
