Cleaning up PIG explorer.

--- a/Parse-Dashboard/index.html
+++ b/Parse-Dashboard/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<body>
-		<div id="browser_mount"></div>
-		<script src="/bundles/dashboard.bundle.js"></script>
-	</body>
+  <title>Parse Dashboard</title>
+  <body>
+    <div id="browser_mount"></div>
+    <script src="/bundles/dashboard.bundle.js"></script>
+  </body>
 </html>
