--- a/PIG/index.html
+++ b/PIG/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-	<body>
-		<div id="browser_mount"></div>
-		<script src="/bundles/PIG.bundle.js"></script>
-	</body>
+  <title>PIG Component Explorer</title>
+  <body>
+    <div id="browser_mount"></div>
+    <script src="/bundles/PIG.bundle.js"></script>
+  </body>
 </html>
