--- a/Parse-Dashboard/index.html
+++ b/Parse-Dashboard/index.html
@@ -5,13 +5,13 @@
     <script>
         PARSE_DASHBOARD_PATH = "/";
     </script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
 </head>
 <html>
 <title>Parse Dashboard</title>
 <body>
 <div id="browser_mount"></div>
 <script src="/bundles/dashboard.bundle.js"></script>
-
 <script type="text/javascript">
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
