--- a/Parse-Dashboard/index.html
+++ b/Parse-Dashboard/index.html
@@ -4,9 +4,10 @@
     <base href="/"/>
     <script>
         PARSE_DASHBOARD_PATH = "/";
+        console.log('hello')
     </script>
   <script src="https://static.back4app.com/back4app-navigation.bundle.js"></script>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">-->
 </head>
 <html>
 <title>Parse Dashboard</title>
